--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "juice": "^4.2.3",
+    "juice": "^8.0.0",
     "node-sass": "^4.9.0",
-    "nodemailer": "^4.6.4",
+    "nodemailer": "^6.7.7",
     "path": "^0.12.7",
-    "pug": "^2.0.3"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/node": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-typescript": "^7.0.0-beta.46",
-    "@types/jest": "^22.2.3",
-    "@types/node": "^10.0.0",
-    "@types/nodemailer": "^4.6.0",
-    "jest": "^22.4.3",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.5",
+    "@types/node": "^18.0.3",
+    "@types/nodemailer": "^6.4.4",
+    "jest": "^28.1.2",
     "node-typescript": "^0.1.3",
-    "prettier": "^1.12.1",
-    "ts-jest": "^22.4.4",
-    "tslint": "^5.9.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
+    "tslint": "^5.20.1",
     "tslint-config-bbt": "git+https://github.com/blackbird-team/tslint-config-bbt.git",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.8.3"
+    "typedoc": "^0.23.7",
+    "typescript": "^4.7.4"
   },
   "repository": {
     "type": "git",
