--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "juice": "^8.0.0",
-    "node-sass": "^4.9.0",
     "nodemailer": "^6.7.7",
     "path": "^0.12.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stylus": "^0.58.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
